# simpleseq

./: Makefile  README.md  example.py  play.py  pyproject.toml
notebooks/: fun.ipynb
notebooks/.ipynb_checkpoints/: fun-checkpoint.ipynb
simpleseq/: __init__.py  lib.py
