[tool.poetry]
name = "simpleseq"
version = "0.1.0"
description = ""
authors = ["Koki Matsumura <matsumura.koki1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
jupyter = "^1.0.0"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
pyaudio = "^0.2.13"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
